2009-09-09  Steve Block  <steveblock@google.com>

Reviewed by Adam Barth.

        Geolocation incorrectly calls error callback in case of exception in success callback.
        https://bugs.webkit.org/show_bug.cgi?id=27255

        * fast/dom/Geolocation/resources/callback-exception.js: Added. Tests that when an exception is thrown from the success callback, the error callback is not invoked.
        * fast/dom/Geolocation/callback-exception.html: Added. Wrapper for above test.
        * fast/dom/Geolocation/callback-exception-expected.txt: Added. Expected result for above test.
        * platform/gtk/Skipped: Modified. Adds the above tests to the skipped list.
2009-09-09  Steve Block  <steveblock@google.com>

        Reviewed by Adam Barth.

        Geolocation incorrectly calls error callback in case of exception in success callback.
        https://bugs.webkit.org/show_bug.cgi?id=27255

        Test: fast/dom/Geolocation/callback-exception.html

        * bindings/js/JSCustomPositionCallback.cpp: Modified.
        (WebCore::JSCustomPositionCallback::handleEvent): Modified. Removed raisedException out param.
        * bindings/js/JSCustomPositionCallback.h: Modified. Removed raisedException out param from handleEvent method and made handleEvent private.
        * bindings/js/JSCustomPositionErrorCallback.h: Modified. Made handleEvent private.
        * page/Geolocation.cpp: Modified.
        (WebCore::Geolocation::sendPosition): Modified. No longer call error callback in case of exception in success callback.
        * page/PositionCallback.h: Modified. Removed raisedException out param from handleEvent method.

Canonical link: https://commits.webkit.org/39779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48210 268f45cc-cd09-0410-ab3c-d52691b4dbfc