WebCore/page/PositionCallback.h
@@ -36,7 +36,7 @@ namespace WebCore {
     class PositionCallback : public RefCounted<PositionCallback> {
     public:
         virtual ~PositionCallback() { }
-        virtual void handleEvent(Geoposition* position, bool& raisedException) = 0;
+        virtual void handleEvent(Geoposition*) = 0;
     };
     
 } // namespace WebCore
